Fix issue on mobile screen

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -657,23 +657,6 @@ a {
 ========================== */
 
 @media (max-width: 576px) {
-  html,
-  body {
-    overflow-x: hidden;
-  }
-
-  body {
-    padding: 0;
-    margin: 0;
-  }
-
-  .container,
-  .container-fluid {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    overflow-x: hidden;
-  }
-
   .text-header {
     font-size: 2.5rem;
     margin: 0 1rem;
